* [*] Block editor: Remove Gallery caption button on mobile [https://github.com/WordPress/gutenberg/pull/53010]
* [*] Block editor: Fix Gallery block selection when adding media [https://github.com/WordPress/gutenberg/pull/53127]
* [*] [internal] Fix an issue with some media pickers not deallocating after selection in post editor [#21225]
* [*] Fix an issue in Reader topics cleanup that could cause the app to crash. [#21243]

22.9
-----
* [*] [internal] Fix multiple memory leaks after logging in and logging out. [#21047, #21092]
* [**] Block editor: Move undo/redo buttons to the navigation bar. [#20930]
* [*] Fixed an issue that caused the UI to be briefly unresponsive in certain case when opening the app. [#21065]
* [**] Blogging Prompts: Fixed a crash in Reader after tapping on a blogging prompt multiple times. [#21112]
* [*] [internal] Update calls to use UserDefaults singleton. [#21088]
* [*] Fix memory leaks in setting up Jetpack connection. [#21052]
* [*] Fix a memory leak caused by the theme customization web view. [#21051]
* [**] [internal] Updated the code that enables Gutenberg editor in all blogs when the user is in the Gutenberg rollout group. [#21146]
* [**] [internal] Fix a few potential Core Data issues in Blogging Prompts & Reminders. [#21016]
* [*] [Jetpack-only] Made performance improvements for Posting Activity stats. [#21136]
* [*] Fixed a crash that could occur when following sites in Reader. [#21140]
* [*] Fix an issue with avatars not loading in mentions [#21169]
* [*] [Jetpack-only] Fixed a crash that could occur when the user deletes the WordPress app upon a successful migration. [#21167]
* [*] Fixed a crash that occurs in Weekly Roundup Background task due to a Core Data Concurrency violation. [#21076]
* [***] Block editor: Editor UX improvements with new icons, colors and additional design enhancements. [https://github.com/wordpress-mobile/gutenberg-mobile/pull/5985]

22.8
-----